2.8 Rigid body objects disappear from the scene with Rigid Body > Bake to keyframes command #65109

Closed
opened 2019-05-25 10:38:05 +02:00 by Tomasz Kaye · 4 comments

System Information
Operating system: Darwin-18.0.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.0.36

Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: b3f96da2e6

Short description of error
Rigid body objects disappear from the scene when the Rigid Body > Bake to keyframes command is used.

Exact steps for others to reproduce the error
Open the attached .blend.
With the four Roundcube objects selected, go to Object > Rigid body > Bake to keyframes.
Choose endframe: 10 (for instance) and click Ok.
The Roundcube objects disappear from the scene.

rigidbodybakebug.blend

**System Information** Operating system: Darwin-18.0.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.0.36 **Blender Version** Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: `b3f96da2e6` **Short description of error** Rigid body objects disappear from the scene when the Rigid Body > Bake to keyframes command is used. **Exact steps for others to reproduce the error** Open the attached .blend. With the four Roundcube objects selected, go to Object > Rigid body > Bake to keyframes. Choose endframe: 10 (for instance) and click Ok. The Roundcube objects disappear from the scene. [rigidbodybakebug.blend](https://archive.blender.org/developer/F7067199/rigidbodybakebug.blend)
Author

Added subscriber: @info-27

Added subscriber: @info-27
Bastien Montagne self-assigned this 2019-06-13 17:38:31 +02:00

Grmlll… Core of the issue here is again very weird set-up of rigidbody simulation in that file. Why remove RigidBodyWorld collection created when you first add rigidbody sim to an object? Why use a view-layer-instanced collection as rigidbody world collection? … This is really calling for issues, at one point or the other.

Grmlll… Core of the issue here is again very weird set-up of rigidbody simulation in that file. Why remove RigidBodyWorld collection created when you first add rigidbody sim to an object? Why use a view-layer-instanced collection as rigidbody world collection? … This is really calling for issues, at one point or the other.

This issue was referenced by 30116a5274

This issue was referenced by 30116a5274930ece7acaf8b4c6d5e389b32f8b69

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65109
No description provided.